--- a/src/nanoGPT/conf/config.yaml
+++ b/src/nanoGPT/conf/config.yaml
@@ -3,18 +3,21 @@ hydra:
     dir: ./logging/${now:%Y-%m-%d}/${now:%H-%M-%S}/hydra
 
 model:
-  n_embedding: 32  # type=int, help="Embedding size for each token"
-  block_size: 8  # type=int, help='Context length for data loading.'
+  n_embedding: 384  # type=int, help="Embedding size for each token"
+  block_size: 256  # type=int, help='Context length for data loading.'
+  n_heads: 6  # type=int, help="Number of self-attention heads"
+  n_blocks: 6  # type=int, help="Number of self-attention + linear projection blocks"
+  dropout_rate: 0.2  # type=int, help="Percentage of elements in a matrix to set to 0"
 
 data:
   input_text_path: 'data/tinyshakespeare/input.txt'  # type=str, help='Path to input text file'
   split_ratio: 0.9  # type=float, help='Train:Test split ratio.'
 
 loader:
-  batch_size: 4  # type=int, help='Number of examples for data loading.'
+  batch_size: 64  # type=int, help='Number of examples for data loading.'
 
 training:
-  learning_rate: 1e-3  # type=float, help="Starting learning rate"
+  learning_rate: 3e-4  # type=float, help="Starting learning rate"
   epochs: 1  # type=int, help="Number of iterations of training over the full train dataset"
   debug:
     enabled: True  # type=bool, help="Whether or not to use the following debugging flags"
